--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <br></br>
 <br></br>
 <h3> Öncelikle buradaki amacın nedir ? Cevap vermek için aşşağıdakı butonlara tıkla
-<h4> <a href="https://www.w3schools.com">Sadece Merak :)</a></h4><h4>
-<h4> <a href="https://www.w3schools.com">Bende bilmiyorum</a></h4>
-<h4> <a href="https://www.w3schools.com">Çünkü neden olmasın ?</a></h4></h4>
+<h4> <a href="https://exaoyun.cf/sadecemerak.html/">Sadece Merak :)</a></h4><h4>
+<h4> <a href="https://exaoyun.cf/bendebilmiyorum.html/">Bende bilmiyorum</a></h4>
+<h4> <a href="https://exaoyun.cf/cunkundnolmasin.html">Çünkü neden olmasın ?</a></h4></h4>
 </body>
 </html>
