--- a/sadecemerak.html
+++ b/sadecemerak.html
@@ -6,6 +6,6 @@
 <br></br>
 <br></br>
 <h3> Fazla Merak iyi değil :) şimdi senden birşey istiyiceğim sadece tek bir hakkın olduğunu ve bir şıkkı seçtikten sonra birdaha seçmiyiceğine söz veriyormusun ? Hile yapıcaksan oynamiyalım :D
-<h4> <a href="https://exaoyun.cf/gorusz.html/">Tamam Devamke :)</a></h4><h4>
+<h4> <a href="https://exaoyun.cf/gorusz.html">Tamam Devamke :)</a></h4><h4>
 </body>
 </html>
